--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,3 +40,48 @@
     margin-left: 2.5rem;
     font-size: 1.6rem;
 }
+.navbar .menu li a:hover{
+    color: rgb(215, 14, 14);
+}
+
+/* home section styling */
+.home{
+    display: flex;
+    background: rgb(234,232,226);
+    background: linear-gradient(30deg, rgba(234,232,226,1) 0%, rgba(7,8,8,1) 75%);
+    height: 100vh;
+    min-width: 50rem;
+    font-family: 'Ubuntu', sans-serif;
+}
+.home .max-width{
+    margin: auto 0 auto 4rem;
+}
+.home .home-content .text-1{
+    font-size: 2.7rem;
+}
+.home .home-content .text-2{
+    font-size: 7.5rem;
+    font-weight: 600;
+    margin-left: -0.3rem;
+}
+.home .home-content .text-3{
+    font-size: 3.5rem;
+    margin: 0.5rem 0;
+}
+.home .home-content .text-3 span{
+    font-size: 3.5rem;
+    margin: 0.5rem 0;
+    color: rgb(196, 38, 38);
+    font-weight: 500;
+}
+.home .home-content button{
+    background-color: rgb(196, 38, 38);
+    color: #fff;
+    height: 6.7rem;
+    width: 15rem;
+    font-size: 2rem;
+    font-weight: 600;
+    border-color: rgb(196, 38, 38);
+    border-radius: 2.1rem;
+    margin-top: 1.6rem;
+}
