--- a/CSS/style.css
+++ b/CSS/style.css
@@ -135,4 +135,45 @@
         font-size: 3rem;
     }
     
+
+    #cont{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 10;
+        background-color: #212121;
+        transition: linear 300ms;
+      }
+      
+      #cont.loaded {
+        transform: translateY(-100%);
+      }
+      
+      #square{
+        width: 200px;
+        height: 200px;
+        background-color: transparent;
+        animation: spin 2s linear infinite;
+        border-radius: 50%;
+        border: solid 2px transparent;
+        border-left-color: #ff3333;
+      }
+      
+      @-moz-keyframes spin {
+          from { -moz-transform: rotate(0deg); }
+          to { -moz-transform: rotate(360deg); }
+      }
+      @-webkit-keyframes spin {
+          from { -webkit-transform: rotate(0deg); }
+          to { -webkit-transform: rotate(360deg); }
+      }
+      @keyframes spin {
+          from {transform:rotate(0deg);}
+          to {transform:rotate(360deg);}
+      }
 }
