--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,7 +72,7 @@
     margin-left: -0.3rem;
 }
 .home .home-content .text-3{
-    font-size: 3.5rem;
+    font-size: 4rem;
     margin: 0.5rem 0;
 }
 .home .home-content .text-3 span{
@@ -92,12 +92,25 @@
     border-radius: 2.1rem;
     margin-top: 1.6rem;
 }
+.home .home-content button:hover{
+    background-color: rgb(255, 0, 0);
+    border-color:rgb(179, 175, 175)
+}
 
 /*responsiveness - start*/
-@media (max-width: 94.7rem){
+@media (max-width: 110.4rem){
+    .home .max-width{
+        margin-left: 0rem;
+    }
+}
+
+@media (max-width: 99.1rem){
     .max-width{
         padding: 0 5rem;
     }
+}
+
+@media (max-width: 94.7rem){
     .menu-btn{
         display: block;
         z-index: 999;
@@ -132,48 +145,37 @@
         font-size: 7.0rem;
     }
     .home .home-content .text-3{
-        font-size: 3rem;
+        font-size: 3.5rem;
     }
-    
+}
 
-    #cont{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100vh;
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 10;
-        background-color: #212121;
-        transition: linear 300ms;
-      }
-      
-      #cont.loaded {
-        transform: translateY(-100%);
-      }
-      
-      #square{
-        width: 200px;
-        height: 200px;
-        background-color: transparent;
-        animation: spin 2s linear infinite;
-        border-radius: 50%;
-        border: solid 2px transparent;
-        border-left-color: #ff3333;
-      }
-      
-      @-moz-keyframes spin {
-          from { -moz-transform: rotate(0deg); }
-          to { -moz-transform: rotate(360deg); }
-      }
-      @-webkit-keyframes spin {
-          from { -webkit-transform: rotate(0deg); }
-          to { -webkit-transform: rotate(360deg); }
-      }
-      @keyframes spin {
-          from {transform:rotate(0deg);}
-          to {transform:rotate(360deg);}
-      }
+@media (max-width: 69rem){
+    .max-width{
+        padding: 0 2.3rem;
+    }
+    .home .home-content .text-2{
+        font-size: 6.0rem;
+    }
+    .home .home-content .text-3{
+        font-size: 3.2rem;
+    }
+    .home .home-content button{
+        height: 5.7rem;
+        width: 15rem;
+        font-size: 1.8rem;
+    }
+}
+
+@media (max-width: 50rem){
+    .home .home-content .text-2{
+        font-size: 5.0rem;
+    }
+    .home .home-content .text-3{
+        font-size: 2.7rem;
+    }
+    .home .home-content button{
+        height: 5.7rem;
+        width: 15rem;
+        font-size: 1.8rem;
+    }
 }
