--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,6 +18,7 @@
 .navbar{
     position: fixed;
     width: 100%;
+    z-index: 999;
     background: rgb(228, 228, 228);
     font-family: 'Ubuntu', sans-serif;
 }
@@ -96,6 +97,70 @@
     background-color: rgb(255, 0, 0);
     border-color:rgb(179, 175, 175)
 }
+
+/*about section styling*/
+section{
+    padding: 10rem 0;
+}
+.about{
+    font-family: 'Poppins', sans-serif;
+}
+.about .title{
+    position: relative;
+    font-size: 4rem;
+    font-weight: 500;
+    text-align: center;
+    font-family: 'Ubuntu', sans-serif;
+    margin-bottom: 6rem;
+    padding-bottom: 2rem;
+}
+.about .title::before{
+    content: "";
+    position: absolute;
+    bottom: 0rem;
+    background: black;
+    left: 50%;
+    width:18rem;
+    height: 0.3rem;
+    transform: translateX(-50%);
+}
+.about .title::after{
+    content: "dive deeper";
+    position: absolute;
+    bottom: -1.2rem;
+    left: 50%;
+    font-size: 2rem;
+    color: rgb(196, 38, 38);
+    padding: 0.5rem;
+    background: #fff;
+    transform: translateX(-50%);
+}
+.about .about-content .left img{
+    height: 40rem;
+    width: 40rem;
+    object-fit: cover;
+    border-radius: 2rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*responsiveness - start*/
 @media (max-width: 110.4rem){
