--- a/CSS/style.css
+++ b/CSS/style.css
@@ -118,28 +118,42 @@ section{
     content: "";
     position: absolute;
     bottom: 0rem;
-    background: black;
+    background: rgb(196, 38, 38);
     left: 50%;
-    width:18rem;
+    width: 19rem;
     height: 0.3rem;
     transform: translateX(-50%);
 }
-.about .title::after{
-    content: "dive deeper";
-    position: absolute;
-    bottom: -1.2rem;
-    left: 50%;
-    font-size: 2rem;
-    color: rgb(196, 38, 38);
-    padding: 0.5rem;
-    background: #fff;
-    transform: translateX(-50%);
+.about .about-content{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+.about .about-content .left{
+    width: 45%;
 }
 .about .about-content .left img{
     height: 40rem;
     width: 40rem;
     object-fit: cover;
     border-radius: 2rem;
+}
+.about .about-content .right{
+    width: 50%;
+}
+.about .about-content .right .text{
+    font-size: 2.5rem;
+    color: rgb(196, 38, 38);
+    font-weight: 700;
+    margin-bottom: 1rem;
+
+}
+.about .about-content .right p{
+    text-align: justify;
+    font-size: 1.6rem;
+    color: black;
+    font-weight: 100;
 }
 
 
@@ -163,9 +177,16 @@ section{
 
 
 /*responsiveness - start*/
-@media (max-width: 110.4rem){
+@media (max-width: 130rem){
     .home .max-width{
-        margin-left: 0rem;
+        margin-left: 0px;
+    }
+}
+
+@media (max-width: 110.4rem){
+    .about .about-content .left img{
+        height: 35rem;
+        width: 35rem;
     }
 }
 
@@ -211,6 +232,20 @@ section{
     }
     .home .home-content .text-3{
         font-size: 3.5rem;
+    }
+    .max-width{
+        max-width: 80rem;
+    }
+    .about .about-content .column{
+        width: 100%;
+    }
+    .about .about-content .left{
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 6rem;
+    }
+    .about .about-content .right{
+        flex: 100%;
     }
 }
 
