--- a/CSS/style.css
+++ b/CSS/style.css
@@ -102,10 +102,10 @@
 section{
     padding: 10rem 0;
 }
-.about{
+.about, .skills {
     font-family: 'Poppins', sans-serif;
 }
-.about .title{
+.about .title , .skills .title{
     position: relative;
     font-size: 4rem;
     font-weight: 500;
@@ -114,6 +114,7 @@ section{
     margin-bottom: 6rem;
     padding-bottom: 2rem;
 }
+.skills .title::before,
 .about .title::before{
     content: "";
     position: absolute;
@@ -155,6 +156,16 @@ section{
     color: black;
     font-weight: 100;
 }
+
+
+.skills .skills-content .info{ 
+    font-size: 2.5rem;
+    font-weight: 600;
+}
+.skills .skills-content .bars{
+    margin-bottom: 1.5rem;
+}
+
 
 
 
