--- a/CSS/style.css
+++ b/CSS/style.css
@@ -157,13 +157,49 @@ section{
     font-weight: 100;
 }
 
-
+.skills{
+    background: lightgray;
+}
 .skills .skills-content .info{ 
-    font-size: 2.5rem;
+    font-size: 2.8rem;
     font-weight: 600;
 }
 .skills .skills-content .bars{
     margin-bottom: 1.5rem;
+}
+.skills .skills-content .line{
+    height: 0.8rem;
+    width: 100%;
+    background: lightslategray;
+    position: relative;
+}
+.skills .skills-content .line::before{
+   content: "";
+   position: absolute;
+   height: 100%;
+   left: 0;
+   background: rgb(183,0,0);
+}
+.skills .skills-content .html::before{
+    width: 90%;
+}
+.skills .skills-content .css::before{
+    width: 80%;
+}
+.skills .skills-content .java::before{
+    width: 55%;
+}
+.skills .skills-content .mysql::before{
+    width: 60%;
+}
+.skills .skills-content .database::before{
+    width: 65%;
+}
+.skills .skills-content .modelling::before{
+    width: 85%;
+}
+.skills .skills-content .lightroom::before{
+    width: 65%;
 }
 
 
