--- a/CSS/style.css
+++ b/CSS/style.css
@@ -230,8 +230,44 @@ section{
     position: relative;
     overflow: hidden;
 }
-
-
+.projects-content .layer{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0,0,0,0.6), #ff004f);
+    border-radius: 2rem;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 0 4rem;
+    text-align: center;
+    color: #fff;
+}
+.projects-content .layer h3{
+    font-size: 2rem;
+    font-weight: 500;
+    margin-bottom: 2rem;
+}
+.projects-content .layer p{
+    font-size: 1.4rem;
+}
+.projects-content .layer a{
+    margin-top: 2rem;
+    color: #ff004f;
+    text-decoration: none;
+    font-size: 2rem;
+    line-height: 5.5rem;
+    background: #fff;
+    width: 5.5rem;
+    height: 5.5rem;
+    border-radius: 50%;
+    text-align: center;
+}
 
 
 
