--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,7 +19,7 @@
     position: fixed;
     width: 100%;
     z-index: 999;
-    background: rgb(228, 228, 228);
+    background: #fff;
     font-family: 'Ubuntu', sans-serif;
 }
 .navbar .logo{
@@ -55,26 +55,34 @@
 /* home section styling */
 .home{
     display: flex;
-    background: rgb(234,232,226);
-    background: linear-gradient(30deg, rgba(234,232,226,1) 0%, rgba(7,8,8,1) 75%);
+    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.3)), url("../ASSETS/IMAGES/hero.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     height: 100vh;
     min-width: 50rem;
     font-family: 'Ubuntu', sans-serif;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 .home .max-width{
     margin: auto 0 auto 4rem;
 }
 .home .home-content .text-1{
     font-size: 2.7rem;
+    color: #fff;
 }
 .home .home-content .text-2{
     font-size: 7.5rem;
     font-weight: 600;
     margin-left: -0.3rem;
+    color: #fff;
 }
 .home .home-content .text-3{
-    font-size: 4rem;
+    font-size: 3rem;
     margin: 0.5rem 0;
+    color: #fff;
 }
 .home .home-content .text-3 span{
     font-size: 3.5rem;
@@ -83,19 +91,19 @@
     font-weight: 500;
 }
 .home .home-content button{
-    background-color: rgb(196, 38, 38);
+    background-color: rgb(30, 29, 29);
     color: #fff;
-    height: 6.7rem;
     width: 15rem;
-    font-size: 2rem;
+    height: 5rem;
+    font-size: 1.8rem;
     font-weight: 600;
-    border-color: rgb(196, 38, 38);
-    border-radius: 2.1rem;
+    border: 0.3rem solid;
+    border-radius: 3em;
     margin-top: 1.6rem;
 }
 .home .home-content button:hover{
-    background-color: rgb(255, 0, 0);
-    border-color:rgb(179, 175, 175)
+    transition: color 0.2s ease-in;
+    color: #ff004f;
 }
 
 /*about section styling*/
@@ -233,7 +241,7 @@ section{
 .projects-content .layer{
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0,0,0,0.6), #ff004f);
+    background: linear-gradient(rgba(0,0,0,0.6), #536976);
     border-radius: 2rem;
     position: absolute;
     left: 0;
