change hobbies section to services

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -119,7 +119,7 @@ section{
 .about .title , 
 .skills .title,
 .projects .title,
-.hobbies .title{
+.services .title{
     position: relative;
     font-size: 4rem;
     font-weight: 500;
@@ -131,7 +131,7 @@ section{
 .skills .title::before,
 .about .title::before,
 .projects .title::before,
-.hobbies .title::before{
+.services .title::before{
     content: "";
     position: absolute;
     bottom: 0rem;
@@ -143,8 +143,7 @@ section{
 }
 .about .about-content,
 .skills .skills-content,
-.projects .projects-content,
-.hobbies .hobbies-content{
+.projects .projects-content{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -298,12 +297,51 @@ section{
     text-align: center;
 }
 
-.hobbies{
+.services{
     background: rgb(30, 29, 29);
 }
-.hobbies .title{
+.services .title{
     color: #fff;
 }
+  
+
+.services-content .row {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 30px;
+  }
+  
+  .service {
+    text-align: center;
+    padding: 25px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    color: #fff;
+    background: #302e2e;
+    transition: transform 0.5s, background 0.5s;
+  }
+  
+  .service i {
+    font-size: 40px;
+    margin-bottom: 10px;
+    color: rgb(196, 38, 38);
+  }
+  
+  .service h2 {
+    font-weight: 600;
+    margin-bottom: 8px;
+  }
+  
+  .service:hover {
+    background: rgb(196, 38, 38);
+    color: #fff;
+    transform: scale(1.05);
+  }
+  
+  .service:hover i {
+    color: #fff;
+  }
 
 
 
